ingress.yml
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: ratelimit
  namespace: kad
spec:
  rateLimit:
      average: 100
      burst: 50
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: retry
  namespace: kad
spec:
  retry:
    attempts: 3
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: stripprefix
  namespace: kad
spec:
  stripPrefix:
    prefixes:
    - /kad
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: kad
  namespace: kad
spec:
  entryPoints:
    - http
    - https
  #tls: {}
  routes:
  - match: HostRegexp(`kad.{domain:.+}`)
    kind: Rule
    middlewares:
    - name: ratelimit
    - name: retry
    - name: stripprefix
    services:
    - name: kad
      port: 80
---
# Old definition used in traefik 1.7
#apiVersion: extensions/v1beta1
#kind: Ingress
#metadata:
#  name: kad
#  namespace: kad
#  annotations:
#    traefik.frontend.rule.type: PathPrefixStrip
#    traefik.ingress.kubernetes.io/preserve-host: "true"
#    traefik.ingress.kubernetes.io/rate-limit: |
#      extractorfunc: client.ip
#      rateset:
#        rateset1:
#          period: 10s
#          average: 2
#          burst: 4
#
#spec:
#  rules:
#  - http:
#      paths:
#      - path: /kad
#        backend:
#          serviceName: kad
#          servicePort: 80
