kubeconfig-exposer.yml
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: basicauth
  namespace: kube-system
spec:
  basicAuth:
    secret: htaccess
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: stripprefix
  namespace: kube-system
spec:
  stripPrefix:
    prefixes:
    - /kubeconfig
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: kubeconfig-exposer
  namespace: kube-system
spec:
  entryPoints:
    - http
    - https
  #tls: {}
  routes:
  - match: PathPrefix(`/kubeconfig/`)
    kind: Rule
    middlewares:
    - name: basicauth
    - name: stripprefix
    services:
    - name: kubeconfig-exposer
      port: 80
---
apiVersion: v1
kind: Service
metadata:
  name: kubeconfig-exposer
  namespace: kube-system
spec:
  selector:
    app: kubeconfig-exposer
  ports:
  - protocol: TCP
    port: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kubeconfig-exposer
  namespace: kube-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kubeconfig-exposer
  template:
    nodeSelector:
      kubernetes.io/hostname: ip-10-0-0-10.eu-central-1.compute.internal
    metadata:
      labels:
        app: kubeconfig-exposer
    spec:
      containers:
      - name: nginx
        image: nginx
        ports:
        - containerPort: 80
        volumeMounts:
        - name: config
          mountPath: /usr/share/nginx/html/
      volumes:
      - name: config
        hostPath:
          path: /etc/kubernetes/users/
          type: Directory
